# ltb-dvh

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  format.sh
cmake/: ThirdParty.cmake
examples/: CMakeLists.txt
examples/cuda/: bara_cuda.cpp  bara_cuda.hpp  scoped_gl_context.cpp  scoped_gl_context.hpp
examples/cuda/interop/: buffer_map_guard.hpp  gl_buffer.cu  gl_buffer.hpp
examples/exec/: main.cpp
examples/gui/: dvh_view_2d.cpp  dvh_view_2d.hpp  dvh_view_3d.cpp  dvh_view_3d.hpp  main_window.cpp  main_window.hpp  obj_io.cpp  scene_helpers.cpp  scene_helpers.hpp  sdf_view.cpp  sdf_view.hpp  view.hpp
ltb-gvs/ltb-util/cmake/: LtbConfig.cmake  LtbSymlink.cmake
ltb-gvs/src/ltb/gvs/display/gui/: imgui_colors.hpp  imgui_utils.cpp  imgui_utils.hpp  settings.cpp
src/ltb/dvh/: cuda_check.hpp  distance_volume_hierarchy.cpp  distance_volume_hierarchy.hpp  distance_volume_hierarchy_util.hpp
src/ltb/dvh/impl/: add_volume.cuh  add_volume.hpp  distance_volume_hierarchy_cpu.cpp  distance_volume_hierarchy_cpu.hpp  distance_volume_hierarchy_gpu.cu  distance_volume_hierarchy_gpu.hpp  distance_volume_hierarchy_util.cpp  distance_volume_hierarchy_util.hpp  register_box.cpp  register_box.cu  register_geometry_type.cuh  register_geometry_type.hpp  register_line.cpp  register_line.cu  register_offset_line.cpp  register_offset_line.cu  register_oriented_line.cpp  register_oriented_line.cu  register_oriented_triangle.cpp  register_oriented_triangle.cu  register_triangle.cpp  register_triangle.cu  subtract_volumes.cuh  subtract_volumes.hpp
src/ltb/sdf/: aabb.hpp  box.cpp  box.hpp  geometry.hpp  line.cpp  line.hpp  lines.cpp  lines.hpp  offset.hpp  offset_line.cpp  offset_line.hpp  oriented_line.cpp  oriented_line.hpp  oriented_triangle.hpp  sdf.hpp  sdf_functions.hpp  transformed_geometry.hpp  triangle.hpp
tmp/: CMakeLists.txt  buffer_map_guard.hpp  dvh_renderable.cu  dvh_renderable.hpp  gl_buffer.cu  gl_buffer.hpp  main.cpp  main_window.cpp  main_window.hpp  mesh.cpp  mesh.hpp  obj_io.cpp  obj_io.hpp  resources.conf
tmp/dvh_viewer/: CMakeLists.txt  dvh_viewer.cu  renderable_dvh.cu  renderable_dvh.hpp
tmp/dvh_viewer/shaders/: point_shader.vert
tmp/shaders/: cell_shader.cpp  cell_shader.frag  cell_shader.hpp  cell_shader.vert
